--- a/CourseAPP/www/templates/search.html
+++ b/CourseAPP/www/templates/search.html
@@ -1,5 +1,15 @@
-<ion-view view-title="Search">
+<ion-view view-title="Profile">
   <ion-content>
-    <h1>Search</h1>
+    <br/>
+    <input ng-model="age"></input>
+    <button class="button button-calm" ng-click='getUser(age)'>Get user with age == {{age}}</button>
+    <br/>
+    <h1>{{user.name}}</h1>
+    <p>{{user.age}}</p>
+
+      <br/>
+      <input ng-model="needAge"></input>
+      <button class="button button-calm" ng-click='setAge(needAge)'>Set age</button>
+
   </ion-content>
 </ion-view>
